<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AccessTokenActivity"
    tools:showIn="@layout/activity_access_token">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/hi_there"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/etAccessToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/textView"
        android:ems="10"
        android:hint="@string/access_token"
        android:layout_marginBottom="15dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/btNext"
        android:background="@color/dark_gray"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etAccessToken"
        android:text="@string/next"/>

</RelativeLayout>